Sort system status on dashboard alphabetically by system ID
Modified `StatusService.getSystemStatusList` to sort returned system status items alphabetically (case-insensitively with a case-sensitive fallback) by their system ID. Added unit tests to `StatusServiceTest` verifying correct sorting behavior.

Co-authored-by: otewhatu-boop <249386691+otewhatu-boop@users.noreply.github.com>